// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="Home mt-5 pt-5"
  >
    <h1
      class="display-1 text-center pt-5"
    >
      Welcome undefined!
    </h1>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <div
    class="Home mt-5 pt-5"
  >
    <h1
      class="display-1 text-center pt-5"
    >
      Welcome To DreamHost
    </h1>
  </div>
</DocumentFragment>
`;
